# GridLex

./: CMakeLists.txt  README.md  gridlex.cbp  gridlex.depend  gridlex.layout  gridsearch.cpp  gridsearch.h  main.cpp  trie.cpp  trie.h  wordfind.cbp  wordfind.depend  wordfind.layout
.github/workflows/: cmake-multi-platform.yml  codeql.yml
test_case/: ignore_words.csv  search_words.csv  word_search_grid.csv
